[package]
name = "486-group-proj-data"
version = "0.1.0"
authors = ["banana <jgjin@umich.edu>"]
edition = "2018"

[dependencies]
chashmap = "2.2.2"
crossbeam-channel = "0.2"
crossbeam-queue = "0.1"
csv = "1.0"
num_cpus = "1.0"
reqwest = "0.9.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.38"
